--- a/omod/src/main/webapp/resources/htmlforms/hts/referralAndLinkage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/referralAndLinkage.html
@@ -76,14 +76,12 @@
                 <tr>
                     <td>&#160;&#160;&#160;&#160;&#160;&#160;Facility linked to: </td>
                     <td> &#160;&#160;&#160;&#160;&#160;&#160;
-
                             <obs conceptId="162724AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-
                     </td>
-                    <td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; Unique Patient Number (UPN):
-                    <td> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                    <td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; CCC number:
+                    <td>
                         <!--<span id="hiv-id"><patient id="upn" field="identifier" identifierTypeId="05ee9cf4-7242-4a17-b4d4-00f707265c8a" required="false" /></span>-->
-                    <obs class="upn" conceptId="162053"
+                    <obs class="upn" conceptId="162053" size="20"
                     />
                 </td>
                     </td>
